generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider   = "prisma-dbml-generator"
  output     = "./dbml"
  outputName = "blog-schema.dbml"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Author {
  id         Int    @id @default(autoincrement())
  firstName  String
  lastName   String
  articles   Post[]
  pictureUrl String
}

model Series {
  id    Int    @id @default(autoincrement())
  title String @unique()
  posts Post[]
}

model Post {
  id          Int      @id @default(autoincrement())
  authors     Author[]
  title       String   @unique()
  abstract    String
  content     String
  images      Image[]
  publishedAt DateTime @default(now())
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  tags        Tag[]
  seriesId    Int
  series      Series   @relation(fields: [seriesId], references: [id])
}

model Image {
  id       Int    @id @default(autoincrement())
  filename String
  data     Bytes
  postId   Int
  post     Post   @relation(fields: [postId], references: [id], onDelete: Cascade)

  @@unique([postId, filename])
}

enum Tag {
  AWS
  GIS
  IAC
  NEST
  POSTGRES
  PRISMA
  PYTHON
  REACT
  TERRAFORM
  TEST
  TYPEORM
  TYPESCRIPT
}
